--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -4,7 +4,7 @@
 
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
-
+<p> Matheus Xavier Mendes dos Santos </p>
 <p>Esta aplicação gerencia vestibulares.</p>
 
 {% endblock %}
