--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -11,7 +11,7 @@
     <abbr title="Telefone">Tel:</abbr>
     91010-1010
 </address>
-
+<p> Matheus Xavier Mendes dos Santos </p>
 <address>
     <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
